--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       db:
-        image: sqlite
+        image: keinos/sqlite3:latest
         options: --health-cmd "sqlite3 db.sqlite3 .databases" --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
