--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,11 @@
 name: Django CI
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-
-#    services:
-#      db:
-#        image: keinos/sqlite3
-#        options: --health-cmd "sqlite3 db.sqlite3 .databases" --health-interval 10s --health-timeout 5s --health-retries 5
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: |
-          python manage.py test
-
   build:
     runs-on: ubuntu-latest
     needs: test
