change workflow to run on PR accept only (close)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: Test on GitHub Actions and deploy to Docker Hub
 
 on:
-  push:
+  pull_request:
+    types:
+      - closed
     branches:
       - main
 
